# mcp-s

./: .pylintrc  Makefile  README.md  pyproject.toml  test.db
src/: main.py
src/agents/: __init__.py  model.py  prompts.py  workflow.py
src/agents/math_agent/: __init__.py  math_agent.py
src/agents/mcp/: mcp_client.py  server.py
src/agents/mcp_tools/: mcp_client.py  server.py
src/agents/mcp_tools/tools/: math_tools.py  users_tool.py
src/agents/user_agent/: __init__.py  agent.py  user_agent.py
src/core/: database.py  dependencies.py  settings.py
src/exceptions/: __init__.py  exception_handlers.py  user_exceptions.py
src/http/: __init__.py
src/http/exceptions/: __init__.py  exception_handlers.py  user_exceptions.py
src/http/v1/: agent.py  agents.py  users.py
src/mcp/: __init__.py  server.py
src/models/: user_model.py
src/queries/: user_queries.py
src/services/: agents_service.py  user_service.py
