[project]
name = "veritas"
version = "0.1.0"
description = "MCP study"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "mcp>=1.13.1",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
